--- a/practic_1/index.html
+++ b/practic_1/index.html
@@ -30,11 +30,13 @@
                     </div>
                     <div class="modal__logo">
                         <p><span class="modal__star">✱</span> Логотип (jpeg, png)</p>
+                        <span class="modal__logo-close"></span>
                         <label for="logo-input">
                             Выберите файл
                             <span class="modal__logo-input"></span>
                         </label>
                         <input type="file" name="file-logo" id="logo-input" >
+                        <img src="img/Ellipse 44.png" alt="logo" class="modal__logo-image" id="logo-image">
                     </div>
                 </div>
                 <div class="modal__direcion">
